# Micro-SVG-Editor

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
scripts/: check_layers.sh
src/: CMakeLists.txt  resources.qrc
src/app/: main.cc  main.cpp
src/io/: Lexer.cc  Lexer.h  Lexer.hpp  LexerCore.cc  LexerCore.h  LexerCore.hpp  LexerHelpers.cc  LexerHelpers.h  LexerHelpers.hpp  LexerScanners.cc  LexerScanners.h  LexerScanners.hpp  LexerSpecial.cc  LexerSpecial.hpp  Parser.cc  Parser.h  Parser.hpp  ParserHelpers.cc  Reader.cc  Reader.h  Reader.hpp  Token.h  Token.hpp  lexer.cc  lexer.h  lexer_core.cc  lexer_helpers.cc  lexer_scanners.cc  lexer_special.cc  loader.h  parser.cc  parser.h  parser_helpers.cc  reader.cc  reader.h  svg_loader.cc  svg_loader.h  token.h
src/model/: Circle.cc  Circle.h  Circle.hpp  GraphicsObject.cc  GraphicsObject.h  GraphicsObject.hpp  Hexagon.cc  Hexagon.h  Hexagon.hpp  Line.cc  Line.h  Line.hpp  Path.cc  Path.h  Path.hpp  Polygon.hpp  Polyline.cc  Polyline.h  Polyline.hpp  Rect.cc  Rect.h  Rect.hpp  SVG.cc  SVG.h  SVG.hpp  Text.cc  Text.h  Text.hpp  circle.cc  circle.h  graphics_object.cc  graphics_object.h  hexagon.cc  hexagon.h  line.cc  line.h  path.cc  path.h  polyline.cc  polyline.h  (+11 more)
src/tests/: test_lexer.cpp  test_parser.cpp
src/ui/: AppWindow.cc  AppWindow.h  AppWindow.hpp  AppWindowConstructor.cc  AppWindowHeaders.h  Canvas.hpp  LeftToolBar.cc  LeftToolBar.h  LeftToolBar.hpp  MenuBar.cc  MenuBar.h  MenuBar.hpp  MenuBarOptions.h  MenuBarOptions.hpp  TopToolBar.cc  TopToolBar.h  TopToolBar.hpp  app_window.cc  app_window.h  app_window_constructor.cc  app_window_headers.h  left_tool_bar.cc  left_tool_bar.h  menu_bar.cc  menu_bar.h  style.qss  top_tool_bar.cc  top_tool_bar.h
src/ui/canvas/: Canvas.QGraphics.hpp  Canvas.QPainter.hpp  Canvas.cc  Canvas.h  Canvas.hpp  Canvas.old.hpp  CanvasHeaders.h  CanvasParts.h  HandleType.h  HandleType.hpp  canvas.cc  canvas.h  canvas_headers.h  handle_geometry.cc  handle_geometry.h  handle_type.h  selection.cc  selection.h  shape_geometry.cc  shape_geometry.h
src/ui/canvas/controllers/: clipboard.h  history.h  viewport.h
src/ui/canvas/include/: AddShapes.cc  AddShapes.h  AddShapes.hpp  BuildPaths.cc  BuildPaths.h  BuildPaths.hpp  DragAndResize.cc  DragAndResize.h  DragAndResize.hpp  MouseEvents.hpp  ObjectCreation.cc  ObjectCreation.h  ObjectCreation.hpp  Paste.cc  Paste.h  RenderHandles.cc  RenderHandles.hpp  Renderer.cc  Renderer.h  Renderer.hpp  StackOperations.cc  StackOperations.h  StackOperations.hpp  Tools.cc  Tools.h  Tools.hpp  add_shapes.cc  drag_and_resize.cc  object_creation.cc  paste.cc  path_builder.cc  path_builder.h  render_handles.cc  renderer.cc  stack_operations.cc  tools.cc
src/ui/canvas/include/Tools/: BorderRadiusEdit.hpp  CanvasEdit.hpp  EditOpacity.hpp  StrokeEdit.hpp  TextEdit.hpp
src/ui/canvas/include/handlers/: CircleResizeHandler.cc  CircleResizeHandler.h  CircleResizeHandler.hpp  HexagonResizeHandler.cc  HexagonResizeHandler.h  HexagonResizeHandler.hpp
src/ui/canvas/include/handlers/events/: MouseMoveEvent.cc  MouseMoveEvent.hpp  MousePressEvent.cc  MousePressEvent.h  MousePressEvent.hpp  MouseReleaseEvent.cc  MouseReleaseEvent.h  MouseReleaseEvent.hpp  PaintEvent.cc  PaintEvent.h  PaintEvent.hpp  WheelEvent.cc  WheelEvent.h  WheelEvent.hpp  mouse_move_event.cc  mouse_press_event.cc  mouse_release_event.cc  paint_event.cc  wheel_event.cc
src/ui/canvas/include/tools/: BorderRadiusEdit.cc  CanvasEdit.cc  EditOpacity.cc  StrokeEdit.cc  TextEdit.cc  TextEdit.h  border_radius_edit.cc  canvas_edit.cc  edit_opacity.cc  stroke_edit.cc  text_edit.cc
src/ui/canvas/render/: shape_renderer.cc  shape_renderer.h
src/ui/styles/: LoadStyleSheet.cc  LoadStyleSheet.hpp  load_style_sheet.cc  style.qss
src/ui/tools/: tool_action.h  tool_registry.cc  tool_registry.h
